# JT808ProtocolCPP

./: .clang-format  .clang-format-ignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  README.md
.github/workflows/: cmake_build.yml  pre_commit_check.yml
include/JT808/: BCD.h  Common.h  Message.h  MessageIds.h  Utils.h
src/: AreaSettingProperties.cpp  AudioRecordingStartCommand.cpp  BCD.cpp  BasicLocationInformation.cpp  CANBusDataUpload.cpp  CallbackPhone.cpp  DataCompressionReport.cpp  DataTransmission.cpp  DeletingAreaRoute.cpp  DeletingCircleArea.cpp  DriverIdentityInformationReport.cpp  DrivingRecordCommand.cpp  DrivingRecordDataUpload.cpp  ElectronicWaybillReport.cpp  EventReport.cpp  EventSetting.cpp  ExtraLocationInformation.cpp  GeneralResponse.cpp  ImmediateCameraCaptureCommand.cpp  ImmediateCameraCaptureCommandResponse.cpp  InformationService.cpp  InformationServiceCancel.cpp  InformationServiceMenuSetting.cpp  LocationDataBulkUpload.cpp  LocationInformation.cpp  LocationInformationCommon.cpp  LocationInformationQueryResponse.cpp  LocationInformationReport.cpp  ManualAlarmConfirmation.cpp  Message.cpp  MessageBodyBase.cpp  MessageIds.cpp  Multimedia.cpp  MultimediaDataUpload.cpp  MultimediaDataUploadResponse.cpp  MultimediaEventInformationUpload.cpp  PhoneBookSetting.cpp  QuestionDispatch.cpp  QuestionResponse.cpp  RSAPublicKey.cpp  (+29 more)
test/: BCDTest.cpp  CMakeLists.txt  GeneralResponseTest.cpp  LocationInformationQueryResponseTest.cpp  LocationInformationReportTest.cpp  ManualAlarmConfirmationTest.cpp  MessageBodyBaseTest.cpp  MessageBodyBaseTest.h  MessageTest.cpp  SubPackageRetransmissionRequestTest.cpp  TemporaryLocationTrackingControlTest.cpp  TerminalAuthenticationTest.cpp  TerminalControlTest.cpp  TerminalParameterQueryResponseTest.cpp  TerminalParameterQueryTest.cpp  TerminalParameterSettingTest.cpp  TerminalPropertiesQueryResponseTest.cpp  TerminalRegistrationResponseTest.cpp  TerminalRegistrationTest.cpp  TerminalUpgradePackageResultTest.cpp  TerminalUpgradePackageTest.cpp  UtilsTest.cpp
tests/: AudioRecordingStartCommandTest.cpp  BCDTest.cpp  CANBusDataUploadTest.cpp  CMakeLists.txt  CallbackPhoneTest.cpp  DataCompressionReportTest.cpp  DataTransmissionTest.cpp  DeletingAreaRouteTest.cpp  DeletingCircleAreaTest.cpp  DriverIdentityInformationReportTest.cpp  DrivingRecordCommandTest.cpp  DrivingRecordDataUploadTest.cpp  ElectronicWaybillReportTest.cpp  EventReportTest.cpp  EventSettingTest.cpp  GeneralResponseTest.cpp  ImmediateCameraCaptureCommandResponseTest.cpp  ImmediateCameraCaptureCommandTest.cpp  InformationServiceCancelTest.cpp  InformationServiceMenuSettingTest.cpp  InformationServiceTest.cpp  LocationDataBulkUploadTest.cpp  LocationInformationQueryResponseTest.cpp  LocationInformationReportTest.cpp  ManualAlarmConfirmationTest.cpp  MessageBodyBaseTest.h  MessageTest.cpp  MultiMediaDataUploadResponseTest.cpp  MultiMediaDataUploadTest.cpp  MultiMediaEventInformationUploadTest.cpp  PhoneBoolSettingTest.cpp  QuestionDispatchTest.cpp  QuestionResponeTest.cpp  RSAPublicKeyTest.cpp  SettingCircleAreaTest.cpp  SettingCircularAreaTest.cpp  SettingPolygonAreaTest.cpp  SettingRectangleAreaTest.cpp  SettingRectangularAreaTest.cpp  SettingRouteTest.cpp  (+23 more)
(+126 files in other folders)
